--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,5 @@
 @import "styles/hero.scss";
 @import "styles/mixins.scss";
 @import "styles/config.scss";
+@import "styles/vid.scss";
+@import "styles/recipe.scss";
