--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,6 +1,6 @@
 .hero {
     min-height: 800px;
-    background-image: url(img/cake.png);
+    background-image: url(../img/cake.png);
     background-repeat: no-repeat;
     background-position: bottom right;
 
