--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,11 @@
 @import "styles/hero.scss";
 @import "styles/mixins.scss";
 @import "styles/config.scss";
+@import "styles/global.scss";
+@import "styles/footer.scss";
+
+/* TODO þýða úr sass hér */
+
+/* TODO þýða úr sass hér */
+/* hero */
+
