Uppfærð útgáfa af video.html

--- a/styles.scss
+++ b/styles.scss
@@ -3,3 +3,6 @@
 @import "styles/config.scss";
 @import "styles/vid.scss";
 @import "styles/recipe.scss";
+@import "styles/checkout.scss";
+@import "styles/sub.scss";
+
