--- a/recipe.css
+++ b/recipe.css
@@ -1,4 +1,4 @@
-.body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,19 +6,17 @@
 
 .recipe{
   background: #F2F2F2;
-
 }
 
 h3{
-
-font-style: normal;
-font-weight: bold;
-font-size: 40px;
-line-height: 53px;
-display: flex;
-align-items: flex-end;
-
-color: #D0D0D0;
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 53px;
+  display: flex;
+  align-items: flex-end;
+  color: #D0D0D0;
 }
 
 .recipe__title{
@@ -36,22 +34,19 @@ color: #D0D0D0;
   top: 800px;
 }
 .recipe__dough{
-position: absolute;
-width: 200px;
-height: 17px;
-left: 150px;
-top: 900px;
-
-font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 17px;
-
-display: flex;
-align-items: center;
-
-color: #000000;
+  position: absolute;
+  width: 200px;
+  height: 17px;
+  left: 150px;
+  top: 900px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  color: #000000;
 }
 
 .recipe__filling{
@@ -60,16 +55,12 @@ color: #000000;
   height: 17px;
   left: 150px;
   top: 1085px;
-
   font-family: Poppins;
   font-style: normal;
-
   font-size: 18px;
   line-height: 17px;
-
   display: flex;
   align-items: center;
-
   color: #000000;
 }
 
@@ -77,21 +68,16 @@ color: #000000;
   position: absolute;
   width: 200px;
   height: 30px;
-  left: 218px;
+  left: 150px;
   top: 920px;
-
   font-family: Poppins;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
   line-height: 17px;
   line-height: 32px;
-
-
   align-items: center;
-
   color: #9B9B9B;
-
 }
 
 .recipe__filling__list{
@@ -99,21 +85,14 @@ color: #000000;
   width: 200px;
   height: 30px;
   top: 1111px;
-  left: 218px;
-
-
+  left: 150px;
   font-family: Poppins;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
   line-height: 17px;
   line-height: 32px;
-
-
-
-
   align-items: center;
-
   color: #9B9B9B;
 }
 
@@ -122,16 +101,30 @@ color: #000000;
   width: 850px;
   height: 762px;
   left: 595px;
-  top: 88x;
-
+  right: 155;
+  top: 725px;
   font-family: Poppins;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
   line-height: 32px;
-
   display: flex;
   align-items: center;
-
   color: #5E5B69;
+}
+
+.checkout__title{
+  position: absolute;
+  width: 567px;
+  height: 53px;
+  left: 0px;
+  top: 26px;
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 53px;
+  display: flex;
+  align-items: flex-end;
+  color: #D0D0D0;
 }
