--- a/vid.css
+++ b/vid.css
@@ -9,11 +9,8 @@ header{
   max-width: 1600px;
   left: 0px;
   top: 80px;
-
   background: #FFFFFF;
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.05);
-
-
   display: flex;
   align-items: flex-end;
   height: 1 rem;
@@ -26,7 +23,6 @@ header{
   height: 25px;
   left: 152.4px;
   top: 15px;
-
 }
 
 .headertext{
@@ -35,49 +31,49 @@ header{
   height: 23px;
   left: 1061px;
   top: 20px;
-
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
   line-height: 22px;
-
   display: flex;
   align-items: flex-end;
-
   color: #9B9B9B;
 }
 
-.vid__content{
+.vid{
+  position: absolute;
+  background-position: right;
+  background: url(img/Image.png);
+  left: 0px;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
 
+.vid__content{
 width: 1600px;
 height: 650px;
-left: 540px;
-top: 0 px;
-
-background: #000000;
-
+left: 0px;
+top: 0px;
+background: linear-gradient( to right, #000000,#000000,transparent);
 }
-.vid__title{
 
+.vid__title{
   position: absolute;
   width: 356px;
   height: 80px;
   left: 155px;
   top: 214px;
-
   font-family: Playfair Display;
   font-style: normal;
   font-weight: bold;
   font-size: 60px;
   line-height: 80px;
-  /* identical to box height */
-
   display: flex;
   align-items: flex-end;
-
   color: #FFFFFF;
 }
+
 .vid__easy{
   position: absolute;
   font-family: Poppins;
@@ -101,48 +97,12 @@ width: 550px;
 height: 128px;
 left: 156px;
 top: 368px;
-
 font-family: Poppins;
 font-style: normal;
 font-weight: 300;
 font-size: 18px;
 line-height: 32px;
-/* or 178% */
-
 display: flex;
 align-items: center;
-
 color: #9B9B9B;
-
 }
-.button__play {
-  position: absolute;
-  width: 25.24px;
-  height: 31.55px;
-  left: 1120.43px;
-  top: 339.01px;
-  border-style: solid;
-  border-width: 37px;
-  border-color: #202020;
-
-  border-width: 15px 0px 15px 30px;
-  border-color: red blue green yellow;
-
-  box-sizing: border-box;
-  border-color: transparent transparent transparent black;
-
-
-
-
-}
-
-
-
-
-/* Bitmap */
-
-position: absolute;
-width: 1009.25px;
-height: 690.14px;
-left: 1.75px;
-top: -28.94px;
