--- a/recipemaggi.css
+++ b/recipemaggi.css
@@ -181,7 +181,7 @@ header{
 }
 
 .subgroup{
-    margin-left:110px;
+    margin-left: 150px;
 
 }
 
@@ -200,7 +200,7 @@ header{
 .subbutton{
     border: 1px solid #E3CDB1;
     font-family: Poppins;
-    margin-right: 200px;
+    margin-right: 160px;
 
 
 }
@@ -220,48 +220,272 @@ header{
     font-size: 14px;
 }
 
-.vid__socials{
-    background: #f2f2f2f2;
+.socials{
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.fa{
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius:50%;
+    border: 1px solid;
+    background: white;
+    color: #e3cdb1;
   }
   
-  .face{
-    position: absolute;
-    left: 720px;
-    top: 2910px;
-    bottom: 360px;
-  
-  
-  }
-  .bird{
-    position: absolute;
-    left: 792.08px;
-    top: 2910px;
-    bottom: 360px;
-  
-  }
-  .yout{
-    position: absolute;
-    left: 851.46px;
-    top: 2910px;
-  }
-  
-  .www{
-    position: absolute;
-  left: 754px;
-  top: 2940px;
-  
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 21px;
-  
-  
-  display: flex;
-  align-items: flex-end;
-  letter-spacing: -0.291667px;
-  
-  color: #D0D0D0;
-  
+  .compurl{
+    font-family: Poppins;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: -0.29px;
+    text-align: center;
+    padding-bottom: 100px;
+    color: #D0D0D0
   }
 
+  .joinus{
+    text-align: center;
+    padding-bottom: 20px;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 17px;
+    padding-top: 45px;
+  }
+
+  .checkout{
+    background: #F2F2F2;
+    margin-bottom: 900px;
+  
+  }
+  .checkout__row h4{
+    position: absolute;
+    width: 246.5px;
+    height: 26px;
+    left: 151px;
+    top: 1800px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #E3CDB1;
+  }
+  
+  .checkout__row h5{
+    position: absolute;
+    width: 567px;
+    height: 53px;
+    left: 151px;
+    top: 1820px;
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 53px;
+    display: flex;
+    align-items: flex-end;
+    color: black;
+  }
+  
+  .image1{
+    position: absolute;
+    width: 410px;
+    height: 573px;
+    left: 150px;
+    top: 2000px;
+  }
+  
+  .image2{
+      position: absolute;
+      width: 410px;
+      height: 573px;
+      left: 595px;
+      top: 2000px;
+  }
+  
+  .image3{
+    position: absolute;
+    width: 410px;
+    height: 573px;
+    left: 1036px;
+    top: 2000px;
+  
+  }
+  
+  .menu__heading1{
+    position: absolute;
+    width: 118.21px;
+    height: 23px;
+    left:180.79px;
+    top: 2300px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
+    display: flex;
+    align-items: flex-end;
+    color: #9B9B9B;
+  }
+  
+  .menu1{
+    position: absolute;
+    width: 235px;
+    height: 30px;
+    left:180.79px;
+    top: 2320px;
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 29px;
+    display: flex;
+    align-items: flex-end;
+    color: #000000;
+  }
+  
+  .menu2{
+    position: absolute;
+    width: 235px;
+    height: 30px;
+    left:637px;
+    top: 2320px;
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 29px;
+    display: flex;
+    align-items: flex-end;
+    color: #000000;
+  }
+  
+.menu3{
+    position: absolute;
+    width: 235px;
+    height: 30px;
+    left:1061px;
+    top: 2320px;
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 29px;
+    display: flex;
+    align-items: flex-end;
+    color: #000000;
+  }
+  
+.menu__heading2{
+    position: absolute;
+    width: 118.21px;
+    height: 23px;
+    left:637px;
+    top: 2300px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
+    display: flex;
+    align-items: flex-end;
+    color: #9B9B9B;
+  }
+  
+.menu__heading3{
+    position: absolute;
+    width: 118.21px;
+    height: 23px;
+    left:1061px;
+    top: 2300px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 21px;
+    display: flex;
+    align-items: flex-end;
+    color: #9B9B9B;
+  }
+  
+.readmore1{
+    position: absolute;
+    width: 107px;
+    height: 24px;
+    left: 432px;
+    top: 2320px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    color: #E3CDB1;
+  }
+  
+.readmore2{
+    position: absolute;
+    width: 107px;
+    height: 24px;
+    left: 889px;
+    top: 2320px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    color: #E3CDB1;
+    }
+  
+.readmore3{
+    position: absolute;
+    width: 107px;
+    height: 24px;
+    left: 1312px;
+    top: 2320px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    color: #E3CDB1;
+    }
+  
+.seemore{
+    position: absolute;
+    width: 250px;
+    height: 26px;
+    left: 676px;
+    top: 2500px;
+    border: 1px solid #E3CDB1;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    box-sizing: border-box;
+    text-align: center;
+    color: #E3CDB1; ;
+  }
+
+button{
+    border: 1px solid #E3CDB1;
+    font-family: Poppins;
+    background-color: black;
+    padding: 10px;
+    color: #E3CDB1;
+}
+  
+  
