--- a/latest.css
+++ b/latest.css
@@ -40,10 +40,28 @@ h1{
 }
 
 h3{
-  font-family: Poppins;
-  font-weight: 100%;
+  font-family: Playfair Display;
+  font-weight: bold;
 }
 
+h4{
+  font-family: Poppins;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 21px;
+
+  color: #9B9B9B
+}
+.hero__kicker{
+  font-family: Poppins;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #E3CDB1
+}
 /*
 Header
 */
@@ -75,6 +93,30 @@ header {
   align-items: flex-end;
 }
 
+.topline{
+  justify-content: space-between;
+}
+
+.righttext2{
+  width: 250px;
+  height: 50px;
+  left: 1066px;
+  top: 8px;
+  display: flex;
+  justify-content: space-between;
+
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 22px;
+
+  align-items: flex-end;
+  margin-left: auto;
+  padding-bottom: 50px;
+}*/
+
+
 header .content {
   margin: auto;
   width: 100%;
@@ -98,99 +140,10 @@ main {
   padding-right: 10px;
 }
 
-/*
-Events
-*/
-
-.events {
-  margin-bottom: 2rem;
-}
-
-span{
-  font-family: Poppins;
-  color: #e3cdb1;
-}
-
-.events .col {
-  margin-bottom: 2rem;
-}
-
-.event {
-  position: relative;
-
-  width: 100%;
-  height: 100%;
-  min-height: 250px;
-
-  background-color: #cccccc;
-
-  word-break: break-word;
-}
-
-.event:last-child {
-  margin-right: 0;
-}
-
-.event h3 {
-  margin-bottom: 1rem;
-}
-
-.event p {
-  margin-bottom: 1rem;
-  font-style: italic;
-}
-
-.event ul {
-  list-style: none;
-  font-style: italic;
-}
-
-.event .card {
-  position: absolute;
-  display: flex;
-  left: 0; right: 0; top: 0; bottom: 0;
-  transform-style: preserve-3d;
-  transition: transform 300ms ease-in-out;
-}
-
-.event:hover .card {
-  transform: rotateY(180deg);
-}
-
-.event .face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  padding: 0.5rem;
-}
-
-.event .face.back {
-  transform: rotateY(180deg);
-}
-
-.event .front {
-  display: flex;
-}
-
-.event .front h3 {
-  margin: auto;
-  font-size: 2em;
-  text-align: center;
-}
-
-.event .back {
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
 /* books */
 
 .books {
-  margin-bottom: 2rem;
+  margin-bottom: -1rem;
 }
 
 .books .col {
@@ -251,22 +204,157 @@ span{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #E3CDB1;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: bold;
+
 }
 
 .book .buy .price {
   margin-right: 0.5rem;
 }
 
-.seemore{
-  position: static;
-  width: 1291px;
-  height: 52px;
-  left: -0.5px;
-  top: 3084px;
-
-  flex: none;
-  order: 8;
-  align-self: center;
-  flex-grow: 0;
-  margin: 0px 30px;
+.subsection{
+  background-image: url(img/Background.png);
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  display: flex;
 }
+.Subscribe{
+  margin-bottom: 2rem;
+
+  width: 100%;
+  height: 339px;
+
+  display: flex;
+
+
+
+
+}
+.crave{
+  font-family: Poppins;
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 500;
+  color: #E3CDB1
+}
+
+.socials{
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.fa{
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius:50%;
+  border: 1px solid;
+  background: white;
+  color: #e3cdb1;
+}
+
+.joinus{
+  text-align: center;
+  padding-bottom: 20px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 17px;
+  padding-top: 45px;
+}
+.compurl{
+  font-family: Poppins;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: -0.29px;
+  text-align: center;
+  padding-bottom: 100px;
+  color: #D0D0D0
+}
+button{
+  background-color: black;
+  color: #E3CDB1;
+  font-size: 16px;
+  font-family: Poppins;
+  font-weight: bold;
+  width: auto;
+  border: 1px solid #E3CDB1;
+  padding: 10px;
+
+}
+label{
+  font-family: Poppins;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff
+}
+.sub{
+  width: 565px;
+  height: 53px;
+  top: 26px;
+
+  font-family: Playfair Display;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 40px;
+  line-height: 53.32px;
+
+  color: #FFFFFF
+
+
+}
+
+.seemore{
+  box-sizing: border-box;
+  border: 1px solid #E3CDB1;
+  padding-bottom: 13px;
+  width: 20%;
+  margin: auto;
+}
+.boxtext{
+  text-align:center;
+  padding-top: 13px;
+  font-family: Poppins;
+  color: #E3CDB1;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 16px;
+}
+.Subgroup{
+  margin: auto;
+}
+fieldset{
+  height:109%;
+  border: 0px;
+
+}
+.email1{
+  padding-bottom:5px;
+  padding-top: 18%;
+}
+.buttonflex{
+  padding-left: 415px;
+
+}
+#emailad{
+  background-color: black;
+  font-family: Playfair Display;
+  font-size: 22px;
+  line-height: 29.33px;
+}
+#emailad2{
+  background-color: black;
+  font-family: Playfair Display;
+  font-size: 22px;
+  line-height: 29.33px;
+  font-weight: bold;
+}
+
